--- a/css/style.css
+++ b/css/style.css
@@ -10,28 +10,22 @@ body {
   font-family: "Montserrat", sans-serif;
   background-color: hsl(30, 38%, 92%);
 }
-
-.container {
+.card {
   display: flex;
   width: 37.5rem;
   height: 28.125rem;
   justify-content: center;
   align-items: center;
-  margin: 100px auto;
+  margin: 150px auto;
 }
 
-article img.img-product-desktop {
+.card .image img {
   width: 300px;
   height: 450px;
   margin-top: 4px;
   border-radius: 10px 0px 0px 10px;
 }
-
-article img.img-product-mobile {
-  display: none;
-}
-
-article:last-child {
+.card .description {
   height: 100%;
   width: 100%;
   background-color: hsl(0, 0%, 100%);
@@ -39,7 +33,7 @@ article:last-child {
   border-radius: 0px 10px 10px 0px;
 }
 
-article h2 {
+.card .description h2 {
   text-transform: uppercase;
   color: hsl(228, 12%, 48%);
   font-size: 12px;
@@ -48,35 +42,35 @@ article h2 {
   margin-bottom: 15px;
 }
 
-article h1 {
+.card .description h1 {
   font-family: "Fraunces", serif;
   font-size: 2rem;
   margin-bottom: 20px;
   line-height: 1.1;
 }
 
-article p {
+.card .description p {
   font-size: 0.875rem;
   margin-bottom: 35px;
   color: hsl(228, 12%, 48%);
 }
 
-article div span:first-child {
+.card .description .discount {
   font-size: 2rem;
   font-family: "Fraunces", serif;
   color: hsl(158, 36%, 37%);
 }
 
-article div span:last-child {
+.card .description .price {
   color: hsl(228, 12%, 48%);
-  font-size: 12px;
+  font-size: 15px;
   font-weight: 500;
   position: relative;
   bottom: 8px;
   left: 20px;
 }
 
-.btn {
+.card .description .btn {
   margin-top: 30px;
   padding: 14px;
   width: 100%;
@@ -90,7 +84,7 @@ article div span:last-child {
   border-radius: 10px;
 }
 
-.btn img {
+.card .description .btn img {
   width: 15px;
   height: 16px;
   margin-top: -2px;
@@ -106,36 +100,34 @@ article div span:last-child {
   color: hsl(228, 45%, 44%);
 }
 
-@media only screen and (max-width: 600px) {
-  .container {
+@media only screen and (max-width: 768px) {
+  .card {
     flex-direction: column;
     display: flex;
     width: 345px;
     height: 611px;
   }
-  article h1 {
-    margin-bottom: 20px;
-  }
-  article h2 {
-    margin-bottom: 10px;
-  }
-  article img.img-product-desktop {
-    display: none;
-  }
-  article img.img-product-mobile {
-    display: block;
+  .card .image img {
     width: 100%;
     height: 100%;
+  }
+  .card .description h1 {
+    margin-bottom: 20px;
+  }
+  .card .description h2 {
+    margin-bottom: 10px;
+  }
+  .card .image img {
     border-radius: 10px 10px 0px 0px;
   }
-  article:last-child {
+  .card .description {
     height: 100%;
     width: 100%;
     background-color: hsl(0, 0%, 100%);
     padding: 25px;
     border-radius: 0px 0px 10px 10px;
   }
-  article p {
+  .card .description p {
     margin-bottom: 30px;
   }
 }
